[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.3.1"
async-trait = "0.1.52"
rustls = "0.23.5"
ezsockets = { version = "0.6.1", features = ["rustls"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
url = "2.2.2"
reqwest = { version = "0.12.5", features = ["json"] }
warp = "0.3"
bytes = "1.6.0"
once_cell = "1.18.0"
dotenv = "0.15.0"
regex = "1"
lazy_static = "1.5.0"
chrono = "0.4"
crossbeam = "0.8.4"
dashmap = "6.0.1"
petgraph = "0.6.5"
bigdecimal = "0.4.5"
rand = "0.8"
